# pydash

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/: cli.py  dashboard.py  panels.py
tests/: test_cli.py  test_panels.py
