[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pydash"
version = "1.0.0"
description = "Beautiful terminal system dashboard — CPU, RAM, disk, network, and live processes rendered with rich"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "FreeAutomation-Tech", email = "freeautomation.tech@gmail.com"}]
keywords = ["dashboard", "monitoring", "terminal", "rich", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.10"]

[project.urls]
Homepage = "https://github.com/FreeAutomation-Tech/pydash"
Repository = "https://github.com/FreeAutomation-Tech/pydash"

[project.scripts]
pydash = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
